eu ppreciso que seja um html unico que contenha o css e o js, semelhante

--- a/src/app/slide-template.html
+++ b/src/app/slide-template.html
@@ -196,7 +196,7 @@
 
         <div class="section">
             <h2>{{diagnosticTitle}}</h2>
-            {{diagnosticContent}}
+            {{{diagnosticContent}}}
             <p class="diagnostic-question">{{diagnosticQuestion}}</p>
         </div>
 
@@ -220,19 +220,19 @@
         
         <div class="section">
             <h2>{{timelineTitle}}</h2>
-            {{timelineContent}}
+            {{{timelineContent}}}
         </div>
 
         <div class="section">
             <h2>{{kpiTitle}}</h2>
             <div class="kpi-grid">
-                {{kpiItems}}
+                {{{kpiItems}}}
             </div>
         </div>
 
         <div class="section">
             <h2>{{whyCpTitle}}</h2>
-            {{whyCpContent}}
+            {{{whyCpContent}}}
         </div>
 
         <div class="section">
@@ -242,12 +242,12 @@
 
         <div class="section">
             <h2>{{investmentTitle}}</h2>
-            {{investmentTable}}
+            {{{investmentTable}}}
         </div>
 
         <div class="section">
             <h2>{{nextStepsTitle}}</h2>
-            {{nextStepsContent}}
+            {{{nextStepsContent}}}
         </div>
 
         <footer>
